<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:textAlignment="center"
    tools:context=".calculadoraBasic">

    <EditText
        android:id="@+id/TextValor2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/valor2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextValor1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="12dp"
        android:text="@string/calBasica"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TextValor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TextValor1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/valor1"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/TextValor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/operacion"
        android:layout_width="165dp"
        android:layout_height="0dp"
        android:layout_marginBottom="78dp"
        android:background="@color/purple"
        android:entries="@array/oper"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="19dp"
        android:layout_marginBottom="58dp"
        android:text="@string/btnCalcular"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/operacion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="165dp"
        android:layout_height="66dp"
        android:layout_marginBottom="43dp"
        android:text="@string/operacion"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/operacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextValor2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="151dp"
        android:layout_height="0dp"
        android:layout_marginBottom="96dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalc" />


</androidx.constraintlayout.widget.ConstraintLayout>