<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".conversorTemp">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="151dp"
        android:layout_height="29dp"
        android:layout_marginBottom="128dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.375" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="146dp"
        android:layout_height="56dp"
        android:entries="@array/temperatura"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/spinner1"
        app:layout_constraintStart_toStartOf="@+id/spinner1"
        tools:layout_editor_absoluteY="337dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="223dp"
        android:layout_height="66dp"
        android:text="@string/conversor"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <EditText
        android:id="@+id/TextValor"
        android:layout_width="179dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/valor"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinner1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.168" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:entries="@array/temperatura"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TextValor"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="148dp"
        android:layout_height="32dp"
        android:text="@string/convertir"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/TextValor"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="@+id/TextValor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConvertir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />
</androidx.constraintlayout.widget.ConstraintLayout>